// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlatformCard > 余额态: quotaRaw 显示余额条 1`] = `
<div
  data-platform-id="1"
  style="animation-delay: 0ms; opacity: 1; transition: opacity 150ms ease;"
>
  <div
    class="glass-surface"
    style="display: flex; flex-direction: column; padding: 16px; border-radius: var(--radius-md);"
  >
    <div
      style="display: flex; align-items: center; gap: 8px; min-width: 0px;"
    >
      <div
        style="flex: 1 1 0%; min-width: 0px;"
      >
        <div
          style="display: flex; flex-direction: column; gap: 10px; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 12px; min-width: 0px;"
          >
            <div
              class="drag-handle-inline"
              style="cursor: grab; color: var(--text-tertiary); flex-shrink: 0; display: flex; touch-action: none;"
              title="platform.dragReorder"
            >
              <svg
                fill="currentColor"
                height="18"
                viewBox="0 0 14 20"
                width="12"
              >
                <circle
                  cx="4"
                  cy="3"
                  r="1.8"
                />
                <circle
                  cx="4"
                  cy="10"
                  r="1.8"
                />
                <circle
                  cx="4"
                  cy="17"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="3"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="10"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="17"
                  r="1.8"
                />
              </svg>
            </div>
            <div
              style="position: relative; flex-shrink: 0;"
            >
              <div
                style="width: 36px; height: 36px; border-radius: var(--radius-sm); display: flex; align-items: center; justify-content: center; background: transparent; border: 1px solid var(--accent)30; color: var(--accent); font-size: 12px; font-weight: 700; overflow: hidden;"
              >
                <img
                  alt="anthropic"
                  src="data:image/svg+xml,%3csvg%20width='46'%20height='46'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20fill-rule='evenodd'%20clip-rule='evenodd'%20d='M26.502%206.747h6.906L46%2038.333h-6.906zm-13.911%200h7.22l12.592%2031.586h-7.042L22.787%2031.7H9.616L7.04%2038.33H0L12.593%206.75zm7.92%2019.088L16.2%2014.733l-4.308%2011.104h8.615z'%20fill='%23000'/%3e%3c/svg%3e"
                  style="width: 100%; height: 100%; object-fit: contain; padding: 4px;"
                />
              </div>
              <div
                style="position: absolute; top: -3px; right: -3px; width: 10px; height: 10px; border-radius: 50%; background: var(--color-success, var(--color-success)); border: 2px solid var(--bg-primary); box-shadow: 0 0 4px var(--color-success, var(--color-success))60;"
              />
            </div>
            <div
              style="min-width: 0px; flex: 1 1 0%;"
            >
              <div
                style="font-weight: 600; font-size: 14px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
              >
                Test Platform
              </div>
              <div
                class="text-secondary"
                style="font-size: 11px; margin-top: 1px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
              >
                anthropic
                 · 
                https://api.anthropic.com
              </div>
            </div>
            <div
              style="display: flex; gap: 4px; flex-shrink: 0; align-items: center;"
            >
              <button
                class="btn btn-ghost btn-icon"
                style="padding: 4px; line-height: 0; min-width: auto;"
                title="platform.quotaRefresh"
              >
                <svg
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.2"
                  viewBox="0 0 24 24"
                  width="13"
                >
                  <path
                    d="M21 12a9 9 0 1 1-2.64-6.36"
                  />
                  <polyline
                    points="21 3 21 9 15 9"
                  />
                </svg>
              </button>
              <div
                class="toggle active"
                style="cursor: pointer;"
                title="platform.disable"
              />
              <div
                style="display: inline-flex; font-size: 11px;"
              >
                <button
                  class="btn btn-ghost"
                  style="font-size: 11px; gap: 4px; padding: 3px 8px; border-radius: 6px 0 0 6px; border-right: 1px solid var(--border);"
                  title="platform.quickTest"
                >
                  <svg
                    fill="currentColor"
                    height="12"
                    stroke="none"
                    viewBox="0 0 24 24"
                    width="12"
                  >
                    <path
                      d="M13 2L4 14h7l-2 8 9-12h-7l2-8z"
                    />
                  </svg>
                </button>
                <button
                  class="btn btn-ghost"
                  style="font-size: 11px; padding: 3px 6px; border-radius: 0 6px 6px 0;"
                  title="platform.customTest"
                >
                  <svg
                    fill="none"
                    height="10"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 14 14"
                    width="10"
                  >
                    <path
                      d="M3 5l4 4 4-4"
                    />
                  </svg>
                </button>
              </div>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.viewLogs"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M2 2h10v10H2z"
                  />
                  <path
                    d="M4 5h6M4 7h4M4 9h5"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M10 2l2 2-7 7H3v-2l7-7z"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.share.button"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <circle
                    cx="11"
                    cy="3"
                    r="1.6"
                  />
                  <circle
                    cx="3"
                    cy="7"
                    r="1.6"
                  />
                  <circle
                    cx="11"
                    cy="11"
                    r="1.6"
                  />
                  <path
                    d="M4.4 6.1l5.2-2.4M4.4 7.9l5.2 2.4"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.duplicate"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <rect
                    height="8"
                    rx="1.2"
                    width="8"
                    x="4"
                    y="4"
                  />
                  <path
                    d="M9 4V3a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h1"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon btn-danger"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M2 4h10M5 4V2h4v2M4 4v8a1 1 0 001 1h4a1 1 0 001-1V4"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlatformCard > 健康态: auto_disabled + last_error 显示警告徽标 1`] = `
<div
  data-platform-id="1"
  style="animation-delay: 0ms; opacity: 1; transition: opacity 150ms ease;"
>
  <div
    class="glass-surface"
    style="display: flex; flex-direction: column; padding: 16px; border-radius: var(--radius-md);"
  >
    <div
      style="display: flex; align-items: center; gap: 8px; min-width: 0px;"
    >
      <div
        style="flex: 1 1 0%; min-width: 0px;"
      >
        <div
          style="display: flex; flex-direction: column; gap: 10px; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 12px; min-width: 0px;"
          >
            <div
              class="drag-handle-inline"
              style="cursor: grab; color: var(--text-tertiary); flex-shrink: 0; display: flex; touch-action: none;"
              title="platform.dragReorder"
            >
              <svg
                fill="currentColor"
                height="18"
                viewBox="0 0 14 20"
                width="12"
              >
                <circle
                  cx="4"
                  cy="3"
                  r="1.8"
                />
                <circle
                  cx="4"
                  cy="10"
                  r="1.8"
                />
                <circle
                  cx="4"
                  cy="17"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="3"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="10"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="17"
                  r="1.8"
                />
              </svg>
            </div>
            <div
              style="position: relative; flex-shrink: 0;"
            >
              <div
                style="width: 36px; height: 36px; border-radius: var(--radius-sm); display: flex; align-items: center; justify-content: center; background: transparent; border: 1px solid var(--accent)30; color: var(--accent); font-size: 12px; font-weight: 700; overflow: hidden;"
              >
                <img
                  alt="anthropic"
                  src="data:image/svg+xml,%3csvg%20width='46'%20height='46'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20fill-rule='evenodd'%20clip-rule='evenodd'%20d='M26.502%206.747h6.906L46%2038.333h-6.906zm-13.911%200h7.22l12.592%2031.586h-7.042L22.787%2031.7H9.616L7.04%2038.33H0L12.593%206.75zm7.92%2019.088L16.2%2014.733l-4.308%2011.104h8.615z'%20fill='%23000'/%3e%3c/svg%3e"
                  style="width: 100%; height: 100%; object-fit: contain; padding: 4px;"
                />
              </div>
              <div
                style="position: absolute; top: -3px; right: -3px; width: 10px; height: 10px; border-radius: 50%; background: var(--color-danger, #ff3b30); border: 2px solid var(--bg-primary); box-shadow: 0 0 4px var(--color-danger, #ff3b30)60;"
                title="platform.lastErrorHint"
              />
            </div>
            <div
              style="min-width: 0px; flex: 1 1 0%;"
            >
              <div
                style="font-weight: 600; font-size: 14px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
              >
                Test Platform
              </div>
              <div
                class="text-secondary"
                style="font-size: 11px; margin-top: 1px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
              >
                anthropic
                 · 
                https://api.anthropic.com
              </div>
              <div
                style="margin-top: 3px; display: inline-flex; align-items: center; gap: 4px; font-size: 10px; font-weight: 600; color: var(--color-warning); background: color-mix(in srgb, var(--color-warning) 14%, transparent); border: 1px solid color-mix(in srgb, var(--color-warning) 35%, transparent); border-radius: 5px; padding: 1px 6px; white-space: nowrap;"
                title="platform.autoDisabledHint"
              >
                <svg
                  fill="none"
                  height="10"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.4"
                  viewBox="0 0 24 24"
                  width="10"
                >
                  <path
                    d="M12 9v4"
                  />
                  <path
                    d="M12 17h.01"
                  />
                  <path
                    d="M10.29 3.86 1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
                  />
                </svg>
                platform.autoDisabled
              </div>
              <div
                style="margin-top: 3px; display: inline-flex; align-items: center; gap: 4px; max-width: 100%; font-size: 10px; font-weight: 600; color: var(--color-danger); background: color-mix(in srgb, var(--color-danger) 14%, transparent); border: 1px solid color-mix(in srgb, var(--color-danger) 35%, transparent); border-radius: 5px; padding: 1px 6px;"
                title="platform.lastErrorHint"
              >
                <svg
                  fill="none"
                  height="10"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.4"
                  style="flex-shrink: 0;"
                  viewBox="0 0 24 24"
                  width="10"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <path
                    d="M12 8v4"
                  />
                  <path
                    d="M12 16h.01"
                  />
                </svg>
                <span
                  style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
                >
                  platform.lastError
                  : 
                  HTTP 401
                </span>
              </div>
            </div>
            <div
              style="display: flex; gap: 4px; flex-shrink: 0; align-items: center;"
            >
              <button
                class="btn btn-ghost btn-icon"
                style="padding: 4px; line-height: 0; min-width: auto;"
                title="platform.quotaRefresh"
              >
                <svg
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.2"
                  viewBox="0 0 24 24"
                  width="13"
                >
                  <path
                    d="M21 12a9 9 0 1 1-2.64-6.36"
                  />
                  <polyline
                    points="21 3 21 9 15 9"
                  />
                </svg>
              </button>
              <div
                class="toggle "
                style="cursor: pointer;"
                title="platform.reenable"
              />
              <div
                style="display: inline-flex; font-size: 11px;"
              >
                <button
                  class="btn btn-ghost"
                  style="font-size: 11px; gap: 4px; padding: 3px 8px; border-radius: 6px 0 0 6px; border-right: 1px solid var(--border);"
                  title="platform.quickTest"
                >
                  <svg
                    fill="currentColor"
                    height="12"
                    stroke="none"
                    viewBox="0 0 24 24"
                    width="12"
                  >
                    <path
                      d="M13 2L4 14h7l-2 8 9-12h-7l2-8z"
                    />
                  </svg>
                </button>
                <button
                  class="btn btn-ghost"
                  style="font-size: 11px; padding: 3px 6px; border-radius: 0 6px 6px 0;"
                  title="platform.customTest"
                >
                  <svg
                    fill="none"
                    height="10"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 14 14"
                    width="10"
                  >
                    <path
                      d="M3 5l4 4 4-4"
                    />
                  </svg>
                </button>
              </div>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.viewLogs"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M2 2h10v10H2z"
                  />
                  <path
                    d="M4 5h6M4 7h4M4 9h5"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M10 2l2 2-7 7H3v-2l7-7z"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.share.button"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <circle
                    cx="11"
                    cy="3"
                    r="1.6"
                  />
                  <circle
                    cx="3"
                    cy="7"
                    r="1.6"
                  />
                  <circle
                    cx="11"
                    cy="11"
                    r="1.6"
                  />
                  <path
                    d="M4.4 6.1l5.2-2.4M4.4 7.9l5.2 2.4"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.duplicate"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <rect
                    height="8"
                    rx="1.2"
                    width="8"
                    x="4"
                    y="4"
                  />
                  <path
                    d="M9 4V3a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h1"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon btn-danger"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M2 4h10M5 4V2h4v2M4 4v8a1 1 0 001 1h4a1 1 0 001-1V4"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlatformCard > 展开态: expanded=true 显示明细 1`] = `
<div
  data-platform-id="1"
  style="animation-delay: 0ms; opacity: 1; transition: opacity 150ms ease;"
>
  <div
    class="glass-surface"
    style="display: flex; flex-direction: column; padding: 16px; border-radius: var(--radius-md);"
  >
    <div
      style="display: flex; align-items: center; gap: 8px; min-width: 0px;"
    >
      <div
        style="flex: 1 1 0%; min-width: 0px;"
      >
        <div
          style="display: flex; flex-direction: column; gap: 10px; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 12px; min-width: 0px;"
          >
            <div
              class="drag-handle-inline"
              style="cursor: grab; color: var(--text-tertiary); flex-shrink: 0; display: flex; touch-action: none;"
              title="platform.dragReorder"
            >
              <svg
                fill="currentColor"
                height="18"
                viewBox="0 0 14 20"
                width="12"
              >
                <circle
                  cx="4"
                  cy="3"
                  r="1.8"
                />
                <circle
                  cx="4"
                  cy="10"
                  r="1.8"
                />
                <circle
                  cx="4"
                  cy="17"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="3"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="10"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="17"
                  r="1.8"
                />
              </svg>
            </div>
            <div
              style="position: relative; flex-shrink: 0;"
            >
              <div
                style="width: 36px; height: 36px; border-radius: var(--radius-sm); display: flex; align-items: center; justify-content: center; background: transparent; border: 1px solid var(--accent)30; color: var(--accent); font-size: 12px; font-weight: 700; overflow: hidden;"
              >
                <img
                  alt="anthropic"
                  src="data:image/svg+xml,%3csvg%20width='46'%20height='46'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20fill-rule='evenodd'%20clip-rule='evenodd'%20d='M26.502%206.747h6.906L46%2038.333h-6.906zm-13.911%200h7.22l12.592%2031.586h-7.042L22.787%2031.7H9.616L7.04%2038.33H0L12.593%206.75zm7.92%2019.088L16.2%2014.733l-4.308%2011.104h8.615z'%20fill='%23000'/%3e%3c/svg%3e"
                  style="width: 100%; height: 100%; object-fit: contain; padding: 4px;"
                />
              </div>
              <div
                style="position: absolute; top: -3px; right: -3px; width: 10px; height: 10px; border-radius: 50%; background: var(--color-success, var(--color-success)); border: 2px solid var(--bg-primary); box-shadow: 0 0 4px var(--color-success, var(--color-success))60;"
              />
            </div>
            <div
              style="min-width: 0px; flex: 1 1 0%;"
            >
              <div
                style="font-weight: 600; font-size: 14px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
              >
                Test Platform
              </div>
              <div
                class="text-secondary"
                style="font-size: 11px; margin-top: 1px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
              >
                anthropic
                 · 
                https://api.anthropic.com
              </div>
            </div>
            <div
              style="display: flex; gap: 4px; flex-shrink: 0; align-items: center;"
            >
              <button
                class="btn btn-ghost btn-icon"
                style="padding: 4px; line-height: 0; min-width: auto;"
                title="platform.quotaRefresh"
              >
                <svg
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.2"
                  viewBox="0 0 24 24"
                  width="13"
                >
                  <path
                    d="M21 12a9 9 0 1 1-2.64-6.36"
                  />
                  <polyline
                    points="21 3 21 9 15 9"
                  />
                </svg>
              </button>
              <div
                class="toggle active"
                style="cursor: pointer;"
                title="platform.disable"
              />
              <div
                style="display: inline-flex; font-size: 11px;"
              >
                <button
                  class="btn btn-ghost"
                  style="font-size: 11px; gap: 4px; padding: 3px 8px; border-radius: 6px 0 0 6px; border-right: 1px solid var(--border);"
                  title="platform.quickTest"
                >
                  <svg
                    fill="currentColor"
                    height="12"
                    stroke="none"
                    viewBox="0 0 24 24"
                    width="12"
                  >
                    <path
                      d="M13 2L4 14h7l-2 8 9-12h-7l2-8z"
                    />
                  </svg>
                </button>
                <button
                  class="btn btn-ghost"
                  style="font-size: 11px; padding: 3px 6px; border-radius: 0 6px 6px 0;"
                  title="platform.customTest"
                >
                  <svg
                    fill="none"
                    height="10"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 14 14"
                    width="10"
                  >
                    <path
                      d="M3 5l4 4 4-4"
                    />
                  </svg>
                </button>
              </div>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.viewLogs"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M2 2h10v10H2z"
                  />
                  <path
                    d="M4 5h6M4 7h4M4 9h5"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M10 2l2 2-7 7H3v-2l7-7z"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.share.button"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <circle
                    cx="11"
                    cy="3"
                    r="1.6"
                  />
                  <circle
                    cx="3"
                    cy="7"
                    r="1.6"
                  />
                  <circle
                    cx="11"
                    cy="11"
                    r="1.6"
                  />
                  <path
                    d="M4.4 6.1l5.2-2.4M4.4 7.9l5.2 2.4"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.duplicate"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <rect
                    height="8"
                    rx="1.2"
                    width="8"
                    x="4"
                    y="4"
                  />
                  <path
                    d="M9 4V3a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h1"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon btn-danger"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M2 4h10M5 4V2h4v2M4 4v8a1 1 0 001 1h4a1 1 0 001-1V4"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-expanded="true"
        aria-label="platform.toggleDetail"
        class="btn btn-ghost btn-icon"
        type="button"
      >
        <svg
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          style="transition: transform 0.2s ease; transform: rotate(180deg);"
          viewBox="0 0 24 24"
          width="16"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </button>
    </div>
    <div
      style="margin-top: 10px; border-top: 1px solid var(--border); padding-top: 10px;"
    >
      <div
        style="display: flex; flex-direction: column; gap: 10px;"
      >
        <div
          style="display: flex; flex-direction: column; gap: 8px;"
        >
          <div
            style="display: flex; flex-direction: column; gap: 4px;"
          >
            <span
              class="text-tertiary"
              style="font-size: 10px; font-weight: 600; letter-spacing: 0.3px;"
            >
              platform.usageLabel
            </span>
            <div
              style="display: flex; gap: 6px; flex-wrap: wrap;"
            >
              <div
                style="display: flex; align-items: center; gap: 5px; padding: 4px 10px; border-radius: var(--radius-sm); background: var(--bg-glass); border: 1px solid var(--border); font-size: 12px;"
              >
                <span
                  style="font-size: 13px; display: inline-flex;"
                >
                  <svg
                    fill="none"
                    height="13"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="flex-shrink: 0;"
                    viewBox="0 0 24 24"
                    width="13"
                  >
                    <path
                      d="M13 2 3 14h9l-1 8 10-12h-9l1-8Z"
                    />
                  </svg>
                </span>
                <span
                  style="font-weight: 700; color: var(--text-primary);"
                >
                  15.0K
                </span>
                <span
                  style="font-size: 10px; color: var(--text-tertiary); font-weight: 500;"
                >
                  tokens
                </span>
              </div>
              <div
                style="display: flex; align-items: center; gap: 5px; padding: 4px 10px; border-radius: var(--radius-sm); background: var(--bg-glass); border: 1px solid var(--border); font-size: 12px;"
              >
                <span
                  style="font-size: 13px; display: inline-flex;"
                >
                  <svg
                    fill="none"
                    height="13"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="flex-shrink: 0;"
                    viewBox="0 0 24 24"
                    width="13"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="9"
                    />
                    <path
                      d="M12 7v10M9.5 9.2a2.2 2.2 0 0 1 2.5-1.2c1.2 0 2.2.8 2.2 1.9 0 2.6-4.7 1.3-4.7 4 0 1.1 1 1.9 2.2 1.9a2.2 2.2 0 0 0 2.5-1.2"
                    />
                  </svg>
                </span>
                <span
                  style="font-weight: 700; color: var(--color-warning);"
                >
                  $1.50
                </span>
                <span
                  style="font-size: 10px; color: var(--text-tertiary); font-weight: 500;"
                >
                  cost
                </span>
              </div>
              <div
                style="display: flex; align-items: center; gap: 5px; padding: 4px 10px; border-radius: var(--radius-sm); background: var(--bg-glass); border: 1px solid var(--border); font-size: 12px;"
              >
                <span
                  style="font-size: 13px; display: inline-flex;"
                >
                  <svg
                    fill="none"
                    height="13"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="flex-shrink: 0;"
                    viewBox="0 0 24 24"
                    width="13"
                  >
                    <path
                      d="M20 6 9 17l-5-5"
                    />
                  </svg>
                </span>
                <span
                  style="font-weight: 700; color: var(--color-warning);"
                >
                  95.0%
                </span>
                <span
                  style="font-size: 10px; color: var(--text-tertiary); font-weight: 500;"
                >
                  ok
                </span>
              </div>
            </div>
          </div>
          <div
            style="display: flex; flex-direction: column; gap: 4px;"
          >
            <span
              class="text-tertiary"
              style="font-size: 10px; font-weight: 600; letter-spacing: 0.3px;"
            >
              platform.todayUsageLabel
            </span>
            <div
              style="display: flex; gap: 6px; flex-wrap: wrap;"
            >
              <div
                style="display: flex; align-items: center; gap: 5px; padding: 4px 10px; border-radius: var(--radius-sm); background: var(--bg-glass); border: 1px solid var(--border); font-size: 12px;"
              >
                <span
                  style="font-size: 13px; display: inline-flex;"
                >
                  <svg
                    fill="none"
                    height="13"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="flex-shrink: 0;"
                    viewBox="0 0 24 24"
                    width="13"
                  >
                    <path
                      d="M13 2 3 14h9l-1 8 10-12h-9l1-8Z"
                    />
                  </svg>
                </span>
                <span
                  style="font-weight: 700; color: var(--text-primary);"
                >
                  1.0K
                </span>
                <span
                  style="font-size: 10px; color: var(--text-tertiary); font-weight: 500;"
                >
                  tokens
                </span>
              </div>
              <div
                style="display: flex; align-items: center; gap: 5px; padding: 4px 10px; border-radius: var(--radius-sm); background: var(--bg-glass); border: 1px solid var(--border); font-size: 12px;"
              >
                <span
                  style="font-size: 13px; display: inline-flex;"
                >
                  <svg
                    fill="none"
                    height="13"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    style="flex-shrink: 0;"
                    viewBox="0 0 24 24"
                    width="13"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="9"
                    />
                    <path
                      d="M12 7v10M9.5 9.2a2.2 2.2 0 0 1 2.5-1.2c1.2 0 2.2.8 2.2 1.9 0 2.6-4.7 1.3-4.7 4 0 1.1 1 1.9 2.2 1.9a2.2 2.2 0 0 0 2.5-1.2"
                    />
                  </svg>
                </span>
                <span
                  style="font-weight: 700; color: var(--color-success);"
                >
                  $0.150
                </span>
                <span
                  style="font-size: 10px; color: var(--text-tertiary); font-weight: 500;"
                >
                  cost
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlatformCard > 折叠态: 默认 platform 渲染 1`] = `
<div
  data-platform-id="1"
  style="animation-delay: 0ms; opacity: 1; transition: opacity 150ms ease;"
>
  <div
    class="glass-surface"
    style="display: flex; flex-direction: column; padding: 16px; border-radius: var(--radius-md);"
  >
    <div
      style="display: flex; align-items: center; gap: 8px; min-width: 0px;"
    >
      <div
        style="flex: 1 1 0%; min-width: 0px;"
      >
        <div
          style="display: flex; flex-direction: column; gap: 10px; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 12px; min-width: 0px;"
          >
            <div
              class="drag-handle-inline"
              style="cursor: grab; color: var(--text-tertiary); flex-shrink: 0; display: flex; touch-action: none;"
              title="platform.dragReorder"
            >
              <svg
                fill="currentColor"
                height="18"
                viewBox="0 0 14 20"
                width="12"
              >
                <circle
                  cx="4"
                  cy="3"
                  r="1.8"
                />
                <circle
                  cx="4"
                  cy="10"
                  r="1.8"
                />
                <circle
                  cx="4"
                  cy="17"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="3"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="10"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="17"
                  r="1.8"
                />
              </svg>
            </div>
            <div
              style="position: relative; flex-shrink: 0;"
            >
              <div
                style="width: 36px; height: 36px; border-radius: var(--radius-sm); display: flex; align-items: center; justify-content: center; background: transparent; border: 1px solid var(--accent)30; color: var(--accent); font-size: 12px; font-weight: 700; overflow: hidden;"
              >
                <img
                  alt="anthropic"
                  src="data:image/svg+xml,%3csvg%20width='46'%20height='46'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20fill-rule='evenodd'%20clip-rule='evenodd'%20d='M26.502%206.747h6.906L46%2038.333h-6.906zm-13.911%200h7.22l12.592%2031.586h-7.042L22.787%2031.7H9.616L7.04%2038.33H0L12.593%206.75zm7.92%2019.088L16.2%2014.733l-4.308%2011.104h8.615z'%20fill='%23000'/%3e%3c/svg%3e"
                  style="width: 100%; height: 100%; object-fit: contain; padding: 4px;"
                />
              </div>
              <div
                style="position: absolute; top: -3px; right: -3px; width: 10px; height: 10px; border-radius: 50%; background: var(--color-success, var(--color-success)); border: 2px solid var(--bg-primary); box-shadow: 0 0 4px var(--color-success, var(--color-success))60;"
              />
            </div>
            <div
              style="min-width: 0px; flex: 1 1 0%;"
            >
              <div
                style="font-weight: 600; font-size: 14px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
              >
                Test Platform
              </div>
              <div
                class="text-secondary"
                style="font-size: 11px; margin-top: 1px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
              >
                anthropic
                 · 
                https://api.anthropic.com
              </div>
            </div>
            <div
              style="display: flex; gap: 4px; flex-shrink: 0; align-items: center;"
            >
              <button
                class="btn btn-ghost btn-icon"
                style="padding: 4px; line-height: 0; min-width: auto;"
                title="platform.quotaRefresh"
              >
                <svg
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.2"
                  viewBox="0 0 24 24"
                  width="13"
                >
                  <path
                    d="M21 12a9 9 0 1 1-2.64-6.36"
                  />
                  <polyline
                    points="21 3 21 9 15 9"
                  />
                </svg>
              </button>
              <div
                class="toggle active"
                style="cursor: pointer;"
                title="platform.disable"
              />
              <div
                style="display: inline-flex; font-size: 11px;"
              >
                <button
                  class="btn btn-ghost"
                  style="font-size: 11px; gap: 4px; padding: 3px 8px; border-radius: 6px 0 0 6px; border-right: 1px solid var(--border);"
                  title="platform.quickTest"
                >
                  <svg
                    fill="currentColor"
                    height="12"
                    stroke="none"
                    viewBox="0 0 24 24"
                    width="12"
                  >
                    <path
                      d="M13 2L4 14h7l-2 8 9-12h-7l2-8z"
                    />
                  </svg>
                </button>
                <button
                  class="btn btn-ghost"
                  style="font-size: 11px; padding: 3px 6px; border-radius: 0 6px 6px 0;"
                  title="platform.customTest"
                >
                  <svg
                    fill="none"
                    height="10"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 14 14"
                    width="10"
                  >
                    <path
                      d="M3 5l4 4 4-4"
                    />
                  </svg>
                </button>
              </div>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.viewLogs"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M2 2h10v10H2z"
                  />
                  <path
                    d="M4 5h6M4 7h4M4 9h5"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M10 2l2 2-7 7H3v-2l7-7z"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.share.button"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <circle
                    cx="11"
                    cy="3"
                    r="1.6"
                  />
                  <circle
                    cx="3"
                    cy="7"
                    r="1.6"
                  />
                  <circle
                    cx="11"
                    cy="11"
                    r="1.6"
                  />
                  <path
                    d="M4.4 6.1l5.2-2.4M4.4 7.9l5.2 2.4"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.duplicate"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <rect
                    height="8"
                    rx="1.2"
                    width="8"
                    x="4"
                    y="4"
                  />
                  <path
                    d="M9 4V3a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h1"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon btn-danger"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M2 4h10M5 4V2h4v2M4 4v8a1 1 0 001 1h4a1 1 0 001-1V4"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlatformCard > 测试态: testing=true 禁用测试按钮 1`] = `
<div
  data-platform-id="1"
  style="animation-delay: 0ms; opacity: 1; transition: opacity 150ms ease;"
>
  <div
    class="glass-surface"
    style="display: flex; flex-direction: column; padding: 16px; border-radius: var(--radius-md);"
  >
    <div
      style="display: flex; align-items: center; gap: 8px; min-width: 0px;"
    >
      <div
        style="flex: 1 1 0%; min-width: 0px;"
      >
        <div
          style="display: flex; flex-direction: column; gap: 10px; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 12px; min-width: 0px;"
          >
            <div
              class="drag-handle-inline"
              style="cursor: grab; color: var(--text-tertiary); flex-shrink: 0; display: flex; touch-action: none;"
              title="platform.dragReorder"
            >
              <svg
                fill="currentColor"
                height="18"
                viewBox="0 0 14 20"
                width="12"
              >
                <circle
                  cx="4"
                  cy="3"
                  r="1.8"
                />
                <circle
                  cx="4"
                  cy="10"
                  r="1.8"
                />
                <circle
                  cx="4"
                  cy="17"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="3"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="10"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="17"
                  r="1.8"
                />
              </svg>
            </div>
            <div
              style="position: relative; flex-shrink: 0;"
            >
              <div
                style="width: 36px; height: 36px; border-radius: var(--radius-sm); display: flex; align-items: center; justify-content: center; background: transparent; border: 1px solid var(--accent)30; color: var(--accent); font-size: 12px; font-weight: 700; overflow: hidden;"
              >
                <img
                  alt="anthropic"
                  src="data:image/svg+xml,%3csvg%20width='46'%20height='46'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20fill-rule='evenodd'%20clip-rule='evenodd'%20d='M26.502%206.747h6.906L46%2038.333h-6.906zm-13.911%200h7.22l12.592%2031.586h-7.042L22.787%2031.7H9.616L7.04%2038.33H0L12.593%206.75zm7.92%2019.088L16.2%2014.733l-4.308%2011.104h8.615z'%20fill='%23000'/%3e%3c/svg%3e"
                  style="width: 100%; height: 100%; object-fit: contain; padding: 4px;"
                />
              </div>
              <div
                style="position: absolute; top: -3px; right: -3px; width: 10px; height: 10px; border-radius: 50%; background: var(--color-success, var(--color-success)); border: 2px solid var(--bg-primary); box-shadow: 0 0 4px var(--color-success, var(--color-success))60;"
              />
            </div>
            <div
              style="min-width: 0px; flex: 1 1 0%;"
            >
              <div
                style="font-weight: 600; font-size: 14px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
              >
                Test Platform
              </div>
              <div
                class="text-secondary"
                style="font-size: 11px; margin-top: 1px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
              >
                anthropic
                 · 
                https://api.anthropic.com
              </div>
            </div>
            <div
              style="display: flex; gap: 4px; flex-shrink: 0; align-items: center;"
            >
              <button
                class="btn btn-ghost btn-icon"
                style="padding: 4px; line-height: 0; min-width: auto;"
                title="platform.quotaRefresh"
              >
                <svg
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.2"
                  viewBox="0 0 24 24"
                  width="13"
                >
                  <path
                    d="M21 12a9 9 0 1 1-2.64-6.36"
                  />
                  <polyline
                    points="21 3 21 9 15 9"
                  />
                </svg>
              </button>
              <div
                class="toggle active"
                style="cursor: pointer;"
                title="platform.disable"
              />
              <div
                style="display: inline-flex; font-size: 11px;"
              >
                <button
                  class="btn btn-ghost"
                  disabled=""
                  style="font-size: 11px; gap: 4px; padding: 3px 8px; border-radius: 6px 0 0 6px; border-right: 1px solid var(--border);"
                  title="platform.quickTest"
                >
                  <svg
                    fill="currentColor"
                    height="12"
                    stroke="none"
                    viewBox="0 0 24 24"
                    width="12"
                  >
                    <path
                      d="M13 2L4 14h7l-2 8 9-12h-7l2-8z"
                    />
                  </svg>
                </button>
                <button
                  class="btn btn-ghost"
                  style="font-size: 11px; padding: 3px 6px; border-radius: 0 6px 6px 0;"
                  title="platform.customTest"
                >
                  <svg
                    fill="none"
                    height="10"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 14 14"
                    width="10"
                  >
                    <path
                      d="M3 5l4 4 4-4"
                    />
                  </svg>
                </button>
              </div>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.viewLogs"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M2 2h10v10H2z"
                  />
                  <path
                    d="M4 5h6M4 7h4M4 9h5"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M10 2l2 2-7 7H3v-2l7-7z"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.share.button"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <circle
                    cx="11"
                    cy="3"
                    r="1.6"
                  />
                  <circle
                    cx="3"
                    cy="7"
                    r="1.6"
                  />
                  <circle
                    cx="11"
                    cy="11"
                    r="1.6"
                  />
                  <path
                    d="M4.4 6.1l5.2-2.4M4.4 7.9l5.2 2.4"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.duplicate"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <rect
                    height="8"
                    rx="1.2"
                    width="8"
                    x="4"
                    y="4"
                  />
                  <path
                    d="M9 4V3a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h1"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon btn-danger"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M2 4h10M5 4V2h4v2M4 4v8a1 1 0 001 1h4a1 1 0 001-1V4"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlatformCard > 高峰态: lastTest 显示测试徽标 1`] = `
<div
  data-platform-id="1"
  style="animation-delay: 0ms; opacity: 1; transition: opacity 150ms ease;"
>
  <div
    class="glass-surface"
    style="display: flex; flex-direction: column; padding: 16px; border-radius: var(--radius-md);"
  >
    <div
      style="display: flex; align-items: center; gap: 8px; min-width: 0px;"
    >
      <div
        style="flex: 1 1 0%; min-width: 0px;"
      >
        <div
          style="display: flex; flex-direction: column; gap: 10px; min-width: 0px;"
        >
          <div
            style="display: flex; align-items: center; gap: 12px; min-width: 0px;"
          >
            <div
              class="drag-handle-inline"
              style="cursor: grab; color: var(--text-tertiary); flex-shrink: 0; display: flex; touch-action: none;"
              title="platform.dragReorder"
            >
              <svg
                fill="currentColor"
                height="18"
                viewBox="0 0 14 20"
                width="12"
              >
                <circle
                  cx="4"
                  cy="3"
                  r="1.8"
                />
                <circle
                  cx="4"
                  cy="10"
                  r="1.8"
                />
                <circle
                  cx="4"
                  cy="17"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="3"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="10"
                  r="1.8"
                />
                <circle
                  cx="10"
                  cy="17"
                  r="1.8"
                />
              </svg>
            </div>
            <div
              style="position: relative; flex-shrink: 0;"
            >
              <div
                style="width: 36px; height: 36px; border-radius: var(--radius-sm); display: flex; align-items: center; justify-content: center; background: transparent; border: 1px solid var(--accent)30; color: var(--accent); font-size: 12px; font-weight: 700; overflow: hidden;"
              >
                <img
                  alt="anthropic"
                  src="data:image/svg+xml,%3csvg%20width='46'%20height='46'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20fill-rule='evenodd'%20clip-rule='evenodd'%20d='M26.502%206.747h6.906L46%2038.333h-6.906zm-13.911%200h7.22l12.592%2031.586h-7.042L22.787%2031.7H9.616L7.04%2038.33H0L12.593%206.75zm7.92%2019.088L16.2%2014.733l-4.308%2011.104h8.615z'%20fill='%23000'/%3e%3c/svg%3e"
                  style="width: 100%; height: 100%; object-fit: contain; padding: 4px;"
                />
              </div>
              <div
                style="position: absolute; top: -3px; right: -3px; width: 10px; height: 10px; border-radius: 50%; background: var(--color-success, var(--color-success)); border: 2px solid var(--bg-primary); box-shadow: 0 0 4px var(--color-success, var(--color-success))60;"
              />
            </div>
            <div
              style="min-width: 0px; flex: 1 1 0%;"
            >
              <div
                style="font-weight: 600; font-size: 14px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
              >
                Test Platform
              </div>
              <div
                class="text-secondary"
                style="font-size: 11px; margin-top: 1px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
              >
                anthropic
                 · 
                https://api.anthropic.com
              </div>
              <div
                style="margin-top: 3px; max-width: 100%;"
              >
                <button
                  style="display: inline-flex; align-items: center; gap: 4px; font-size: 10px; font-weight: 600; color: var(--color-success); background: color-mix(in srgb, var(--color-success) 12%, transparent); border: 1px solid color-mix(in srgb, var(--color-success) 30%, transparent); border-radius: 5px; padding: 1px 6px; white-space: nowrap; max-width: 100%; cursor: default;"
                  title="platform.lastTestOkHint"
                  type="button"
                >
                  <span
                    style="font-weight: 700;"
                  >
                    ✓
                  </span>
                  <span>
                    1234
                    ms
                  </span>
                </button>
              </div>
            </div>
            <div
              style="display: flex; gap: 4px; flex-shrink: 0; align-items: center;"
            >
              <button
                class="btn btn-ghost btn-icon"
                style="padding: 4px; line-height: 0; min-width: auto;"
                title="platform.quotaRefresh"
              >
                <svg
                  fill="none"
                  height="13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.2"
                  viewBox="0 0 24 24"
                  width="13"
                >
                  <path
                    d="M21 12a9 9 0 1 1-2.64-6.36"
                  />
                  <polyline
                    points="21 3 21 9 15 9"
                  />
                </svg>
              </button>
              <div
                class="toggle active"
                style="cursor: pointer;"
                title="platform.disable"
              />
              <div
                style="display: inline-flex; font-size: 11px;"
              >
                <button
                  class="btn btn-ghost"
                  style="font-size: 11px; gap: 4px; padding: 3px 8px; border-radius: 6px 0 0 6px; border-right: 1px solid var(--border);"
                  title="platform.quickTest"
                >
                  <svg
                    fill="currentColor"
                    height="12"
                    stroke="none"
                    viewBox="0 0 24 24"
                    width="12"
                  >
                    <path
                      d="M13 2L4 14h7l-2 8 9-12h-7l2-8z"
                    />
                  </svg>
                </button>
                <button
                  class="btn btn-ghost"
                  style="font-size: 11px; padding: 3px 6px; border-radius: 0 6px 6px 0;"
                  title="platform.customTest"
                >
                  <svg
                    fill="none"
                    height="10"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 14 14"
                    width="10"
                  >
                    <path
                      d="M3 5l4 4 4-4"
                    />
                  </svg>
                </button>
              </div>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.viewLogs"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M2 2h10v10H2z"
                  />
                  <path
                    d="M4 5h6M4 7h4M4 9h5"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M10 2l2 2-7 7H3v-2l7-7z"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.share.button"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <circle
                    cx="11"
                    cy="3"
                    r="1.6"
                  />
                  <circle
                    cx="3"
                    cy="7"
                    r="1.6"
                  />
                  <circle
                    cx="11"
                    cy="11"
                    r="1.6"
                  />
                  <path
                    d="M4.4 6.1l5.2-2.4M4.4 7.9l5.2 2.4"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon"
                title="platform.duplicate"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <rect
                    height="8"
                    rx="1.2"
                    width="8"
                    x="4"
                    y="4"
                  />
                  <path
                    d="M9 4V3a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h1"
                  />
                </svg>
              </button>
              <button
                class="btn btn-ghost btn-icon btn-danger"
              >
                <svg
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 14 14"
                  width="14"
                >
                  <path
                    d="M2 4h10M5 4V2h4v2M4 4v8a1 1 0 001 1h4a1 1 0 001-1V4"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
